* libgcj-classpath-compare.html: Rebuilt.

--- a/htdocs/java/index.html
+++ b/htdocs/java/index.html
@@ -72,6 +72,8 @@ For <code>javax.crypto</code> support, we recommend the use of
 
 <!-- News entries start here -->
 
+FIXME: 3.3 release!
+
 <tr><td valign="top">
 <b>January 3, 2003</b>
 </td><td>
