* index.html: Added news item for 3.3 release.

--- a/htdocs/java/index.html
+++ b/htdocs/java/index.html
@@ -73,6 +73,15 @@ For <code>javax.crypto</code> support, we recommend the use of
 <!-- News entries start here -->
 
 <tr><td valign="top">
+<b>May 14, 2003</b>
+</td><td>
+<a href="http://gcc.gnu.org/gcc-3.3/">GCC 3.3 has been released</a>.
+This release includes many bug fixes, support for <code>assert</code>,
+and JDBC 3.0 support in <code>java.sql</code>
+and <code>javax.sql</code>, among other things.
+</td></tr>
+
+<tr><td valign="top">
 <b>January 3, 2003</b>
 </td><td>
 Jeff Sturm implemented libffi closures for SPARC so that libgcj's
