Improve structure and simplify a bit.

--- a/htdocs/contribute.html
+++ b/htdocs/contribute.html
@@ -200,15 +200,17 @@ behavior.)</p>
 <p>We prefer patches posted as plain text or as MIME parts of type
 <code>text/x-patch</code> or <code>text/plain</code>, disposition
 <code>inline</code>, encoded as <code>7bit</code> or
-<code>8bit</code>.  If the patch is too big or too mechanical, posting
-it gzipped or bzip2ed and uuencoded or encoded as a
-<code>base64</code> MIME part is acceptable, as long as the ChangeLog
-is still posted as plain text.  Other than that, it is strongly
-discouraged to post patches as MIME parts of type
+<code>8bit</code>.
+It is strongly discouraged to post patches as MIME parts of type
 <code>application/</code><i>whatever</i>, disposition
-<code>attachment</code> and/or encoded as <code>base64</code> or
+<code>attachment</code> or encoded as <code>base64</code> or
 <code>quoted-printable</code>.  Avoid MIME large-message splitting
 (<code>message/partial</code>) at all costs.</p>
+
+<p> If the patch is too big or too mechanical, posting it gzipped or
+bzip2ed and uuencoded or encoded as a <code>base64</code> MIME part is
+acceptable, as long as the ChangeLog is still posted as plain text.
+</p>
 
 <p>When you have all these pieces, bundle them up in a mail message
 and send it to <a
