--- a/htdocs/bugs/index.html
+++ b/htdocs/bugs/index.html
@@ -487,10 +487,8 @@ in GCC 3.1.
 
 <dt>Covariant return types</dt>
 
-<dd>We do not implement non-trivial covariant returns. We also generate
-incorrect virtual function tables for trivial covariance. Although
-trivial covariance will work, it is incompatible with the ABI. GNATS PR
-3706 tracks this problem.</dd>
+<dd>Up to (and including) GCC 3.3 we did not implement non-trivial
+covariant returns.  This has been addressed for GCC 3.4.</dd>
 
 </dl>
 
