Document Emacs versions needing -fno-zero-initialized-in-bss.

--- a/htdocs/gcc-3.3/changes.html
+++ b/htdocs/gcc-3.3/changes.html
@@ -59,11 +59,10 @@
 	produce an error message if used.</li>
 
     <li>GCC 3.3.1 automatically places zero-initialized variables in
-        the <code>.bss</code> section on some operating systems.  GNU
-        Emacs will not work correctly when using this optimization.
-        Therefore, you should use
-        <code>-fno-zero-initialized-in-bss</code> to build GNU
-        Emacs.</li>
+        the <code>.bss</code> section on some operating systems.
+        Versions of GNU Emacs up to (and including) 21.3 will not work
+        correctly when using this optimization; you can use
+        <code>-fno-zero-initialized-in-bss</code> to disable it.</li>
   </ul>
 
 <h2>General Optimizer Improvements</h2>
