--- a/htdocs/bugs/management.html
+++ b/htdocs/bugs/management.html
@@ -66,16 +66,9 @@ certain status transitions are allowed.</td>
 <dd>The PR has been filed and the responsible person(s) notified.</dd>
 
 <dt><b>NEW</b></dt>
-<dd>
-A maintainer has verified that this is indeed a bug in GCC. Every
+<dd>A maintainer has verified that this is indeed a bug in GCC. Every
 once in a while, old reports will need to be rechecked, to find out
-whether the bug still exists.
-
-<p>For reports in components "C", "C++", and "optimization", we require that
-there is a reduced, small testcase before they can be put into this state. This
-makes sure that all NEW reports are really analyzed and are ready to be handed
-off to the people actually fixing bugs.</p>
-</dd>
+whether the bug still exists.</dd>
 
 <dt><b>WAITING</b></dt>
 <dd>The submitter was asked for further information, or asked to try
@@ -90,7 +83,7 @@ sought. If the problem cannot be solved at all, it should be closed
 rather than suspended.</dd>
 
 <dt><b>ASSIGNED</b></dt>
-<dd> This bug is not yet resolved, but is assigned to the proper
+<dd>This bug is not yet resolved, but is assigned to the proper
 person. From here bugs can be given to another person and become
 <b>NEW</b>, or resolved and become <b>RESOLVED</b>.</dd>
      
@@ -195,23 +188,30 @@ list of the keywords including descriptions</a>.</p>
 
 <h2>Procedures and Policies</h2>
 
-<p><strong>Bugs that are in state "WAITING"</strong> because they lack
-information that is necessary for reproducing the problem can be closed
-if no response was received for three months.</p>
+<p><strong>Putting reports in components "C", "C++", and "optimization" in
+state "NEW"</strong> requires that there is a reduced, small testcase.
+This makes sure that all NEW reports are really analyzed and are ready to
+be handed off to the people actually fixing bugs.</p>
 
 <p><a name="regression"><strong>Regressions</strong></a> should be explicitly
 marked as such.  The summary line should read</p>
 
 <blockquote>
-[&lt;branches-to-fix&gt; regression] &lt;rest-of-summary&gt;
+[<em>branches-to-fix</em> regression] <em>rest-of-summary</em>
 </blockquote>
 
-<p>where &lt;branches-to-fix&gt; is the list of <em>maintained</em>
+<p>where <em>branches-to-fix</em> is the list of maintained
 branches (separated by slashes) that need fixing. In addition the target
 milestone should be set accordingly. A regression should start with
 severity "<strong>critical</strong>" to bring it to attention. It may
 be downgraded later if a defect is not important enough to justify
 "critical" severity.</p>
+
+<p><strong>Bugs with keyword "ice-on-invalid-code"</strong>, where GCC
+emits a sensible error message before issuing an ICE (the ICE will be
+replaced by the message "confused by earlier errors, bailing out" in
+release versions) should get "minor" severity and the additional keyword
+"error-recovery".</p>
 
 <p><strong>Bugs in component "bootstrap"</strong> that refer to older
 releases or snapshots/CVS versions should be put into state "WAITING",
@@ -224,11 +224,9 @@ report her findings in any case (whether positive or negative).</p>
 <li>if no response arrives, close the PR after three months.</li>
 </ul>
 
-<p><strong>Bugs with keyword "ice-on-invalid-code"</strong>, where gcc
-emits a sensible error message before issuing an ICE (the ICE will be
-replaced by the message "confused by earlier errors, bailing out" in
-release versions) should get "minor" severity and the additional keyword
-"error-recovery".</p>
+<p><strong>Bugs that are in state "WAITING"</strong> because they lack
+information that is necessary for reproducing the problem can be closed
+if no response was received for three months.</p>
 
 
 </body>
