--- a/htdocs/gcc-3.2/buildstat.html
+++ b/htdocs/gcc-3.2/buildstat.html
@@ -589,6 +589,13 @@ Installing GCC: Final Installation</a>.</p>
 
 <tr>
 <td>i686-pc-linux-gnu</td>
+<td>Red Hat 7.2, glibc 2.2.4, binutils 2.11.90.0.8, kernel 2.4.7</td>
+<td>Successful:
+<a href="http://gcc.gnu.org/ml/gcc/2003-07/msg01147.html">3.2.3</a></td>
+</tr>
+
+<tr>
+<td>i686-pc-linux-gnu</td>
 <td>Red Hat 7.2, glibc 2.2.4, binutils 2.13.1, kernel 2.4.7</td>
 <td>Successful:
 <a href="http://gcc.gnu.org/ml/gcc/2002-11/msg00786.html">3.2.1</a>
@@ -616,6 +623,13 @@ Installing GCC: Final Installation</a>.</p>
 <td>Red Hat 7.2, glibc 2.2.4, kernel 2.4.19</td>
 <td>Successful (C, C++):
 <a href="http://gcc.gnu.org/ml/gcc/2002-10/msg01287.html">3.2</a></td>
+</tr>
+
+<tr>
+<td>i686-pc-linux-gnu</td>
+<td>Red Hat 7.2, glibc 2.2.4, kernel 2.4.20</td>
+<td>Successful:
+<a href="http://gcc.gnu.org/ml/gcc/2003-07/msg00135.html">3.2.3</a></td>
 </tr>
 
 <tr>
