New bootstrap entries for 3.3:
  i386-unknown-openbsd3.3
  i686-pc-linux-gnu (Debian, glibc 2.2.5, kernel 2.4.18)
  i686-pc-linux-gnu (Red Hat 7.3, glibc 2.2.5, kernel 2.4.20)

--- a/htdocs/gcc-3.3/buildstat.html
+++ b/htdocs/gcc-3.3/buildstat.html
@@ -186,6 +186,14 @@ Installing GCC: Final Installation</a>.</p>
 </tr>
 
 <tr>
+<td>i386-unknown-openbsd3.3</td>
+<td>OpenBSD 3.3</td>
+<td>Bootstrap (C, C++, F77):
+<a href="http://gcc.gnu.org/ml/gcc/2003-07/msg00278.html">3.3</a>
+</td>
+</tr>
+
+<tr>
 <td>i586-pc-linux-gnu</td>
 <td>Red Hat 7.3, glibc 2.2.5, kernel 2.4.20</td>
 <td>Bootstrap:
@@ -223,6 +231,14 @@ Installing GCC: Final Installation</a>.</p>
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2003-05/msg00948.html">3.3</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2003-05/msg00945.html">3.3</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2003-05/msg00940.html">3.3</a>
+</td>
+</tr>
+
+<tr>
+<td>i686-pc-linux-gnu</td>
+<td>Debian, glibc 2.2.5, kernel 2.4.18</td>
+<td>Bootstrap:
+<a href="http://gcc.gnu.org/ml/gcc/2003-07/msg01481.html">3.3</a>
 </td>
 </tr>
 
@@ -272,6 +288,7 @@ Installing GCC: Final Installation</a>.</p>
 <td>i686-pc-linux-gnu</td>
 <td>Red Hat 7.3, glibc 2.2.5, kernel 2.4.20</td>
 <td>Bootstrap:
+<a href="http://gcc.gnu.org/ml/gcc/2003-07/msg01321.html">3.3</a>,
 <a href="http://gcc.gnu.org/ml/gcc/2003-06/msg00430.html">3.3</a>
 </td>
 </tr>
