--- a/htdocs/gcc-3.3/changes.html
+++ b/htdocs/gcc-3.3/changes.html
@@ -697,5 +697,195 @@ Detailed release notes for the GCC 3.3 release follow.
 <li><a href="http://gcc.gnu.org/PR10308">10308</a> [x86] ICE with <code>-O -fgcse</code> or <code>-O2</code></li>
 </ul>
 
+<hr />
+<h2><a name="3.3.1">GCC 3.3.1</a></h2>
+
+<h3>Bug Fixes</h3>
+
+<p>This section lists the problem reports (PRs) from GCC's bug tracking
+system that
+are known to be fixed in the 3.3.1 release. This list might not be complete
+(that is, it is possible that some PRs that have been fixed are not listed
+here).</p>
+
+<h4>Bootstrap failures</h4>
+<ul>
+<li><a href="http://gcc.gnu.org/PR11272">11272</a> [Solaris] make bootstrap fails while building libstdc++</li>
+</ul>
+<h4>Internal compiler errors (multi-platform)</h4>
+<ul>
+<li><a href="http://gcc.gnu.org/PR5754">5754</a> ICE on invalid nested template class</li>
+<li><a href="http://gcc.gnu.org/PR6597">6597</a> ICE in <code>set_mem_alias_set</code> compiling Qt with <code>-O2</code> on ia64 and  <code>--enable-checking</code></li>
+<li><a href="http://gcc.gnu.org/PR6949">6949</a> (c++) ICE in <code>tsubst_decl</code>, in <code>cp/pt.c</code></li>
+<li><a href="http://gcc.gnu.org/PR7053">7053</a> (c++) ICE when declaring a function already defined as a friend method of a template class</li>
+<li><a href="http://gcc.gnu.org/PR8164">8164</a> (c++) ICE when using different <code>const</code> expressions as template parameter </li>
+<li><a href="http://gcc.gnu.org/PR8384">8384</a> (c++) ICE in <code>is_base_type</code>, in <code>dwarf2out.c</code></li>
+<li><a href="http://gcc.gnu.org/PR9559">9559</a> (c++) ICE with invalid initialization of a static <code>const</code></li>
+<li><a href="http://gcc.gnu.org/PR9649">9649</a> (c++) ICE in <code>finish_member_declaration</code>, in <code>cp/semantics.c</code> when redeclaring a static member variable</li>
+<li><a href="http://gcc.gnu.org/PR9864">9864</a> (fortran) ICE in <code>add_abstract_origin_attribute</code>, in <code>dwarfout.c</code> with <code>-g</code> <code>-O</code> <code>-finline-functions</code></li>
+<li><a href="http://gcc.gnu.org/PR10432">10432</a> (c++) ICE in <code>poplevel</code>, in <code>cp/decl.c</code></li>
+<li><a href="http://gcc.gnu.org/PR10475">10475</a> ICE in <code>subreg_highpart_offset</code> for code with <code>long long</code></li>
+<li><a href="http://gcc.gnu.org/PR10635">10635</a> (c++) ICE when dereferencing an incomplete type casted from a void pointer </li>
+<li><a href="http://gcc.gnu.org/PR10661">10661</a> (c++) ICE in <code>instantiate_decl</code>, in <code>cp/pt.c</code> while instantiating static member variables</li>
+<li><a href="http://gcc.gnu.org/PR10700">10700</a> ICE in <code>copy_to_mode_reg</code> on 64-bit targets</li>
+<li><a href="http://gcc.gnu.org/PR10712">10712</a> (c++) ICE in <code>constructor_name_full</code>, in <code>cp/decl2.c</code></li>
+<li><a href="http://gcc.gnu.org/PR10796">10796</a> (c++) ICE when defining an <code>enum</code> with two values: <code>-1</code> and <code>MAX_INT_64BIT</code></li>
+<li><a href="http://gcc.gnu.org/PR10890">10890</a> ICE in <code>merge_assigned_reloads</code> building Linux 2.4.2x <code>sched.c</code></li>
+<li><a href="http://gcc.gnu.org/PR10939">10939</a> (c++) ICE with template code</li>
+<li><a href="http://gcc.gnu.org/PR10956">10956</a> (c++) ICE when specializing a template member function of a template class, in tsubst, in <code>cp/pt.c</code></li>
+<li><a href="http://gcc.gnu.org/PR11041">11041</a> (c++) ICE: <code>const myclass &amp;x = *x;</code> (when <code>operator*()</code> defined)</li>
+<li><a href="http://gcc.gnu.org/PR11059">11059</a> (c++) ICE with empty union</li>
+<li><a href="http://gcc.gnu.org/PR11083">11083</a> (c++) ICE in <code>commit_one_edge_insertion</code>, in <code>cfgrtl.c</code> with <code>-O2</code> <code>-fnon-call-exceptions</code></li>
+<li><a href="http://gcc.gnu.org/PR11105">11105</a> (c++) ICE in <code>mangle_conv_op_name_for_type</code></li>
+<li><a href="http://gcc.gnu.org/PR11149">11149</a> (c++) ICE on error when instantiation with call function of a base type</li>
+<li><a href="http://gcc.gnu.org/PR11228">11228</a> (c++) ICE on new-expression using array <code>operator new</code> and default-initialization</li>
+<li><a href="http://gcc.gnu.org/PR11301">11301</a> (fortran) ICE with <code>-fno-globals</code></li>
+<li><a href="http://gcc.gnu.org/PR11473">11473</a> (c++) ICE with <code>-gstabs</code> when empty <code>struct</code> inherits from an empty <code>struct</code></li>
+<li><a href="http://gcc.gnu.org/PR11503">11503</a> (c++) ICE when instantiating template with <code>ADDR_EXPR</code></li>
+</ul>
+<h4>Optimization bugs</h4>
+<ul>
+<li><a href="http://gcc.gnu.org/PR11198">11198</a> <code>-O2</code> <code>-frename-registers</code> generates wrong code (aliasing problem)</li>
+<li><a href="http://gcc.gnu.org/PR11304">11304</a> Wrong code production with <code>-fomit-frame-pointer</code></li>
+<li><a href="http://gcc.gnu.org/PR11381">11381</a> volatile memory access optimized away</li>
+<li><a href="http://gcc.gnu.org/PR11536">11536</a> [strength-reduce] <code>-O2</code> optimization produces wrong code</li>
+<li><a href="http://gcc.gnu.org/PR11557">11557</a> constant folding bug generates wrong code</li>
+</ul>
+<h4>C front end</h4>
+<ul>
+<li><a href="http://gcc.gnu.org/PR5897">5897</a> No warning for statement after <code>return</code></li>
+<li><a href="http://gcc.gnu.org/PR11279">11279</a> DWARF-2 output mishandles large <code>enum</code>s</li>
+</ul>
+<h4>Preprocessor bugs</h4>
+<ul>
+<li><a href="http://gcc.gnu.org/PR11022">11022</a> no warning for non-compatible macro redefinition</li>
+</ul>
+<h4>C++ compiler and library</h4>
+<ul>
+<li><a href="http://gcc.gnu.org/PR5388">5388</a> Incorrect message "operands to ?: have different types"</li>
+<li><a href="http://gcc.gnu.org/PR5390">5390</a> Libiberty fails to demangle multi-digit template parameters</li>
+<li><a href="http://gcc.gnu.org/PR9393">9393</a> Anonymous namespaces and compiling the same file twice</li>
+<li><a href="http://gcc.gnu.org/PR10032">10032</a> <code>-pedantic</code> converts some errors to warnings</li>
+<li><a href="http://gcc.gnu.org/PR10468">10468</a> const <code>typeof</code>(x) is non-const, but only in templates</li>
+<li><a href="http://gcc.gnu.org/PR10527">10527</a> confused error message with "<code>new int</code>()" parameter initializer</li>
+<li><a href="http://gcc.gnu.org/PR10682">10682</a> gcc chokes on a <code>typedef</code> for an <code>enum</code> inside a class template</li>
+<li><a href="http://gcc.gnu.org/PR10689">10689</a> <code>pow(std::complex(0),1/3)</code> returns <code>(nan, nan)</code> instead of 0.</li>
+<li><a href="http://gcc.gnu.org/PR10845">10845</a> template member function (with nested template as parameter) cannot  be called anymore if another unrelated template member function is defined</li>
+<li><a href="http://gcc.gnu.org/PR10849">10849</a> Cannot define an out-of-class specialization of a private nested  template class</li>
+<li><a href="http://gcc.gnu.org/PR10888">10888</a> Suppress <code>-Winline</code> warnings for system headers</li>
+<li><a href="http://gcc.gnu.org/PR10929">10929</a> <code>-Winline</code> warns about functions for which no definition is visible</li>
+<li><a href="http://gcc.gnu.org/PR10931">10931</a> valid conversion <code>static_cast</code>&lt;<code>const</code> unsigned <code>int</code>&amp;&gt;(lvalue-of-type-<code>int</code>) is rejected</li>
+<li><a href="http://gcc.gnu.org/PR10940">10940</a> Bad code with explicit specialization</li>
+<li><a href="http://gcc.gnu.org/PR10968">10968</a> If member function implicitly instantiated, explicit instantiation of class fails to instantiate it</li>
+<li><a href="http://gcc.gnu.org/PR10990">10990</a> Cannot convert with <code>dynamic_cast</code>&lt;&gt; to a private base class from within a member function</li>
+<li><a href="http://gcc.gnu.org/PR11039">11039</a> Bad interaction between implicit typename deprecation and friendship</li>
+<li><a href="http://gcc.gnu.org/PR11062">11062</a> (libstdc++) avoid <code>__attribute__</code> ((unused)); say  "__unused__" instead</li>
+<li><a href="http://gcc.gnu.org/PR11095">11095</a> C++ <code>iostream</code> manipulator causes segfault when called with negative argument</li>
+<li><a href="http://gcc.gnu.org/PR11098">11098</a> g++ doesn't emit complete debugging information for local variables in destructors</li>
+<li><a href="http://gcc.gnu.org/PR11137">11137</a> Linux shared library constructors not called unless there's one global object</li>
+<li><a href="http://gcc.gnu.org/PR11154">11154</a> spurious ambiguity report for template class specialization</li>
+<li><a href="http://gcc.gnu.org/PR11329">11329</a> Compiler cannot find user defined implicit typecast</li>
+<li><a href="http://gcc.gnu.org/PR11332">11332</a> Spurious error with casts in ?: expression</li>
+<li><a href="http://gcc.gnu.org/PR11431">11431</a> static_cast behavior with subclasses when default constructor available</li>
+<li><a href="http://gcc.gnu.org/PR11528">11528</a> <code>money_get</code> facet does not accept "$.00" as valid</li>
+<li><a href="http://gcc.gnu.org/PR11546">11546</a> Type lookup problems in out-of-line definition of a class doubly nested from a template class</li>
+<li><a href="http://gcc.gnu.org/PR11567">11567</a> C++ code containing templated member function with same name as pure virtual member function results in linking failure</li>
+</ul>
+<h4>Java compiler and library</h4>
+<ul>
+<li><a href="http://gcc.gnu.org/PR5179">5179</a> Qualified static field access doesn't initialize its class</li>
+<li><a href="http://gcc.gnu.org/PR8204">8204</a> gcj <code>-O2</code> to native reorders certain instructions improperly</li>
+</ul>
+<h4>x86-specific (Intel/AMD)</h4>
+<ul>
+<li><a href="http://gcc.gnu.org/PR4823">4823</a> ICE on inline assembly code</li>
+<li><a href="http://gcc.gnu.org/PR9815">9815</a> (c++ library) <code>atomicity.h</code> - fails to compile with <code>-O3</code> <code>-masm=intel</code></li>
+<li><a href="http://gcc.gnu.org/PR10402">10402</a> (inline assembly) [x86] ICE in <code>merge_assigned_reloads</code>, in <code>reload1.c</code></li>
+<li><a href="http://gcc.gnu.org/PR10504">10504</a> ICE with SSE2 code and <code>-O3</code> <code>-mcpu</code>=pentium4 <code>-msse2</code></li>
+<li><a href="http://gcc.gnu.org/PR10673">10673</a> ICE for x86-64 on freebsd libc <code>vfprintf.c</code> source</li>
+<li><a href="http://gcc.gnu.org/PR11044">11044</a> [x86] out of range loop instructions for FP code on K6</li>
+<li><a href="http://gcc.gnu.org/PR11089">11089</a> ICE: <code>instantiate_virtual_regs_lossage</code> while using SSE built-ins</li>
+<li><a href="http://gcc.gnu.org/PR11420">11420</a> [x86_64] gcc generates invalid asm code when "<code>-O -fPIC</code>" is used</li>
+</ul>
+<h4>Sparc- or Solaris- specific</h4>
+<ul>
+<li><a href="http://gcc.gnu.org/PR9362">9362</a> solaris 'as' dies when fed .s and "<code>-gstabs</code>"</li>
+<li><a href="http://gcc.gnu.org/PR10142">10142</a> [SPARC64] gcc produces wrong code when passing structures by value</li>
+<li><a href="http://gcc.gnu.org/PR10663">10663</a> New configure check aborts with Sun tools.</li>
+<li><a href="http://gcc.gnu.org/PR10835">10835</a> combinatorial explosion in scheduler on HyperSPARC</li>
+<li><a href="http://gcc.gnu.org/PR10876">10876</a> ICE in <code>calculate_giv_inc</code> when building KDE </li>
+<li><a href="http://gcc.gnu.org/PR10955">10955</a> wrong code at <code>-O3</code> for structure argument in context of structure return</li>
+<li><a href="http://gcc.gnu.org/PR11018">11018</a> <code>-mcpu</code>=ultrasparc busts tar-1.13.25</li>
+<li><a href="http://gcc.gnu.org/PR11556">11556</a> [sparc64] ICE in <code>gen_reg_rtx</code>() while compiling 2.6.x Linux kernel</li>
+</ul>
+<h4>ia64 specific</h4>
+<ul>
+<li><a href="http://gcc.gnu.org/PR10907">10907</a> gcc violates the ia64 ABI (GP must be preserved)</li>
+<li><a href="http://gcc.gnu.org/PR11320">11320</a> scheduler bug (in machine depended reorganization pass)</li>
+</ul>
+<h4>PowerPC specific</h4>
+<ul>
+<li><a href="http://gcc.gnu.org/PR9745">9745</a> [powerpc] gcc mis-compiles libmcrypt (alias problem during loop)</li>
+<li><a href="http://gcc.gnu.org/PR10871">10871</a> error in rs6000_stack_info save_size computation</li>
+<li><a href="http://gcc.gnu.org/PR11440">11440</a> gcc mis-compiles c++ code (libkhtml) with <code>-O2</code>, <code>-fno-gcse</code> cures it</li>
+</ul>
+<h4>m68k-specific</h4>
+<ul>
+<li><a href="http://gcc.gnu.org/PR7594">7594</a> [m68k] ICE on legal code associated with simplify-rtx</li>
+<li><a href="http://gcc.gnu.org/PR10557">10557</a> [m68k] ICE in <code>subreg_offset_representable_p</code></li>
+<li><a href="http://gcc.gnu.org/PR11054">11054</a> [m68k] ICE in <code>reg_overlap_mentioned_p</code></li>
+</ul>
+<h4>ARM-specific</h4>
+<ul>
+<li><a href="http://gcc.gnu.org/PR10842">10842</a> [arm] Clobbered link register is copied to pc under certain circumstances</li>
+<li><a href="http://gcc.gnu.org/PR11052">11052</a> [arm] noce_process_if_block() can lose REG_INC notes</li>
+<li><a href="http://gcc.gnu.org/PR11183">11183</a> [arm] ICE in <code>change_address_1</code> (3.3) / subreg_hard_regno (3.4)</li>
+</ul>
+<h4>MIPS-specific</h4>
+<ul>
+<li><a href="http://gcc.gnu.org/PR11084">11084</a> ICE in <code>propagate_one_insn</code>, in <code>flow.c</code></li>
+</ul>
+<h4>SH-specific</h4>
+<ul>
+<li><a href="http://gcc.gnu.org/PR10331">10331</a> can't compile c++ part of gcc cross compiler for sh-elf</li>
+<li><a href="http://gcc.gnu.org/PR10413">10413</a> [SH] ICE in <code>reload_cse_simplify_operands</code>, in <code>reload1.c</code></li>
+<li><a href="http://gcc.gnu.org/PR11096">11096</a> i686-linux to sh-linux cross compiler fails to compile C++ files</li>
+</ul>
+<h4>GNU/Linux (or Hurd?) specific</h4>
+<ul>
+<li><a href="http://gcc.gnu.org/PR2873">2873</a> Bogus fixinclude of <code>stdio.h</code> from glibc 2.2.3</li>
+</ul>
+<h4>UnixWare specific</h4>
+<ul>
+<li><a href="http://gcc.gnu.org/PR3163">3163</a> configure bug: <code>gcc/aclocal.m4</code> mmap test fails on UnixWare 7.1.1</li>
+</ul>
+<h4>Cygwin (or mingw) specific</h4>
+<ul>
+<li><a href="http://gcc.gnu.org/PR5287">5287</a> ICE with dllimport attribute </li>
+<li><a href="http://gcc.gnu.org/PR10148">10148</a> [MingW/CygWin] Compiler dumps core</li>
+</ul>
+<h4>DJGPP specific</h4>
+<ul>
+<li><a href="http://gcc.gnu.org/PR8787">8787</a> GCC fails to emit .intel_syntax when invoked with <code>-masm</code>=intel on DJGPP</li>
+</ul>
+<h4>Documentation</h4>
+<ul>
+<li><a href="http://gcc.gnu.org/PR1607">1607</a> (c++) Format attributes on methods undocumented</li>
+<li><a href="http://gcc.gnu.org/PR4252">4252</a> Invalid option `<code>-fdump-translation-unit</code>'</li>
+<li><a href="http://gcc.gnu.org/PR4490">4490</a> Clarify restrictions on <code>-m96bit-long-double</code>, <code>-m128bit-long-double</code></li>
+<li><a href="http://gcc.gnu.org/PR10355">10355</a> document an issue with regparm attribute on some systems (e.g. Solaris)</li>
+<li><a href="http://gcc.gnu.org/PR10726">10726</a> (fortran) Documentation for function "IDate Intrinsic (Unix)" is wrong</li>
+<li><a href="http://gcc.gnu.org/PR10805">10805</a> document bug in old version of Sun assembler</li>
+<li><a href="http://gcc.gnu.org/PR10815">10815</a> warn against GNU binutils on AIX</li>
+<li><a href="http://gcc.gnu.org/PR10877">10877</a> document need for newer binutils on i?86-*<code>-linux-gnu</code></li>
+<li><a href="http://gcc.gnu.org/PR11280">11280</a> Manual incorrect with respect to <code>-freorder-blocks</code></li>
+<li><a href="http://gcc.gnu.org/PR11466">11466</a> Document <code>-mlittle-endian</code> and its restrictions for the sparc64 port</li>
+</ul>
+<h4>Testsuite bugs (compiler itself is not affected)</h4>
+<ul>
+<li><a href="http://gcc.gnu.org/PR10737">10737</a> newer bison causes <code>g++.dg/parse/crash2.C</code> to incorrectly report failure</li>
+<li><a href="http://gcc.gnu.org/PR10810">10810</a> gcc-3.3 fails make check: buffer overrun in <code>test_demangle.c</code></li>
+</ul>
+
 </body>
 </html>
