--- a/htdocs/gcc-3.3/changes.html
+++ b/htdocs/gcc-3.3/changes.html
@@ -739,9 +739,11 @@ here).</p>
 <li><a href="http://gcc.gnu.org/PR11105">11105</a> (c++) ICE in <code>mangle_conv_op_name_for_type</code></li>
 <li><a href="http://gcc.gnu.org/PR11149">11149</a> (c++) ICE on error when instantiation with call function of a base type</li>
 <li><a href="http://gcc.gnu.org/PR11228">11228</a> (c++) ICE on new-expression using array <code>operator new</code> and default-initialization</li>
+<li><a href="http://gcc.gnu.org/PR11282">11282</a> (c++) Infinite memory usage after syntax error</li>
 <li><a href="http://gcc.gnu.org/PR11301">11301</a> (fortran) ICE with <code>-fno-globals</code></li>
 <li><a href="http://gcc.gnu.org/PR11473">11473</a> (c++) ICE with <code>-gstabs</code> when empty <code>struct</code> inherits from an empty <code>struct</code></li>
 <li><a href="http://gcc.gnu.org/PR11503">11503</a> (c++) ICE when instantiating template with <code>ADDR_EXPR</code></li>
+<li><a href="http://gcc.gnu.org/PR11513">11513</a> (c++) ICE in <code>push_template_decl_real</code>, in <code>cp/pt.c</code>: template member functions</li>
 </ul>
 <h4>Optimization bugs</h4>
 <ul>
@@ -768,6 +770,7 @@ here).</p>
 <li><a href="http://gcc.gnu.org/PR10032">10032</a> <code>-pedantic</code> converts some errors to warnings</li>
 <li><a href="http://gcc.gnu.org/PR10468">10468</a> const <code>typeof</code>(x) is non-const, but only in templates</li>
 <li><a href="http://gcc.gnu.org/PR10527">10527</a> confused error message with "<code>new int</code>()" parameter initializer</li>
+<li><a href="http://gcc.gnu.org/PR10679">10679</a> parameter MIN_INLINE_INSNS is not honored</li>
 <li><a href="http://gcc.gnu.org/PR10682">10682</a> gcc chokes on a <code>typedef</code> for an <code>enum</code> inside a class template</li>
 <li><a href="http://gcc.gnu.org/PR10689">10689</a> <code>pow(std::complex(0),1/3)</code> returns <code>(nan, nan)</code> instead of 0.</li>
 <li><a href="http://gcc.gnu.org/PR10845">10845</a> template member function (with nested template as parameter) cannot  be called anymore if another unrelated template member function is defined</li>
@@ -790,15 +793,20 @@ here).</p>
 <li><a href="http://gcc.gnu.org/PR11528">11528</a> <code>money_get</code> facet does not accept "$.00" as valid</li>
 <li><a href="http://gcc.gnu.org/PR11546">11546</a> Type lookup problems in out-of-line definition of a class doubly nested from a template class</li>
 <li><a href="http://gcc.gnu.org/PR11567">11567</a> C++ code containing templated member function with same name as pure virtual member function results in linking failure</li>
+<li><a href="http://gcc.gnu.org/PR11645">11645</a> Failure to deal with using and private inheritance</li>
 </ul>
 <h4>Java compiler and library</h4>
 <ul>
 <li><a href="http://gcc.gnu.org/PR5179">5179</a> Qualified static field access doesn't initialize its class</li>
 <li><a href="http://gcc.gnu.org/PR8204">8204</a> gcj <code>-O2</code> to native reorders certain instructions improperly</li>
+<li><a href="http://gcc.gnu.org/PR10838">10838</a> java.io.ObjectInputStream syntax error</li>
+<li><a href="http://gcc.gnu.org/PR10886">10886</a> The RMI registry that comes with GCJ does not work correctly</li>
+<li><a href="http://gcc.gnu.org/PR11349">11349</a> JNDI URL context factories not located correctly</li>
 </ul>
 <h4>x86-specific (Intel/AMD)</h4>
 <ul>
 <li><a href="http://gcc.gnu.org/PR4823">4823</a> ICE on inline assembly code</li>
+<li><a href="http://gcc.gnu.org/PR8878">8878</a> miscompilation with <code>-O</code> and SSE</li>
 <li><a href="http://gcc.gnu.org/PR9815">9815</a> (c++ library) <code>atomicity.h</code> - fails to compile with <code>-O3</code> <code>-masm=intel</code></li>
 <li><a href="http://gcc.gnu.org/PR10402">10402</a> (inline assembly) [x86] ICE in <code>merge_assigned_reloads</code>, in <code>reload1.c</code></li>
 <li><a href="http://gcc.gnu.org/PR10504">10504</a> ICE with SSE2 code and <code>-O3</code> <code>-mcpu</code>=pentium4 <code>-msse2</code></li>
@@ -822,6 +830,7 @@ here).</p>
 <ul>
 <li><a href="http://gcc.gnu.org/PR10907">10907</a> gcc violates the ia64 ABI (GP must be preserved)</li>
 <li><a href="http://gcc.gnu.org/PR11320">11320</a> scheduler bug (in machine depended reorganization pass)</li>
+<li><a href="http://gcc.gnu.org/PR11599">11599</a> bug with conditional and __builtin_prefetch</li>
 </ul>
 <h4>PowerPC specific</h4>
 <ul>
