Document the compile-server-branch.

--- a/htdocs/cvs.html
+++ b/htdocs/cvs.html
@@ -155,6 +155,12 @@ particular releases or snapshots or the latest snapshot.  </p>
 
 <dl>
 
+  <dt>compile-server-branch</dt>
+  <dd>This branch is aimed at improving compile speed by caching
+  work done between compilations.  The work saved is mainly related
+  to header file processing.  Patches should be marked with the tag
+  <code>[cs]</code> in the subject line.</dd>
+
   <dt>dfa-branch</dt>
   <dd>This branch contains the insn scheduler with an automaton
   based pipeline hazard recognizer.</dd>
