Document upstream source for toplevel depcomp script (currently tree-ssa only).

--- a/htdocs/codingconventions.html
+++ b/htdocs/codingconventions.html
@@ -407,8 +407,8 @@ When you check in a patch to one of these files, please check it in
 the src tree too, or ask someone else with CVS write access there to
 do so.</li>
 
-<li>Top-level install-sh, missing, and mkinstalldirs:  These are copied
-from automake, using
+<li>Top-level depcomp, install-sh, missing, and mkinstalldirs:  These are
+copied from automake, using
 <code>automake-1.7 --add-missing --copy --force-missing</code>.</li>
 
 <li>fastjar: The master sources are at <a
