* index.html: Announce gcjwebplugin.

--- a/htdocs/java/index.html
+++ b/htdocs/java/index.html
@@ -73,6 +73,16 @@ For <code>javax.crypto</code> support, we recommend the use of
 <!-- News entries start here -->
 
 <tr><td valign="top">
+<b>July 28, 2003</b>
+</td><td>
+Michael Koch has announced the first (0.0.1) release of
+<a href="http://savannah.nongnu.org/download/gcjwebplugin/">gcjwebplugin</a>.
+This is a plugin to allow execution of applets in web browsers
+like Mozilla, Konqueror, and Opera.  Currently it is still a
+proof-of-concept.
+</td></tr>
+
+<tr><td valign="top">
 <b>May 14, 2003</b>
 </td><td>
 <a href="http://gcc.gnu.org/gcc-3.3/">GCC 3.3 has been released</a>.
