Compress notes on ChangeLogs a bit. Document our convention of including releated PR numbers in ChangeLog entries.

--- a/htdocs/codingconventions.html
+++ b/htdocs/codingconventions.html
@@ -45,10 +45,9 @@ maintained and kept up to date.  In particular:</p>
 <h2>ChangeLogs</h2>
 
 <p>GCC requires ChangeLog entries for documentation changes (see <a
-href="http://gcc.gnu.org/ml/gcc-bugs/1998-03/msg00564.html">message</a>),
-though for changes to the GCC web pages (as opposed to the java and
-libstdc++-v3 ones) there is no appropriate ChangeLog file and the CVS
-logs suffice.</p>
+href="http://gcc.gnu.org/ml/gcc-bugs/1998-03/msg00564.html">message</a>);
+for the GCC web pages (apart from the java and libstdc++-v3 ones) we the
+CVS commit logs are sufficient.</p>
 
 <p>See also what the <a
 href="http://www.gnu.org/prep/standards_toc.html">GNU Coding
@@ -68,6 +67,9 @@ be made for testsuite changes; see messages <a
 href="http://gcc.gnu.org/ml/gcc/2000-09/msg00287.html">1</a> and <a
 href="http://gcc.gnu.org/ml/gcc/2000-09/msg00290.html">2</a>.</p>
 
+<p>If your change fixes a PR, put <code>PR java/58<code> (where
+<code>java/58</code> is the actual number of the PR) at the top
+of the ChangeLog entry.</p>
 
 <h2>Portability</h2>
 
