Add links to regression and performance testing on the tree-ssa branch.

--- a/htdocs/projects/tree-ssa/index.html
+++ b/htdocs/projects/tree-ssa/index.html
@@ -11,6 +11,20 @@ based on the Static Single Assignment (SSA) form [<a
 href="#cytron.ea-91">1</a>].  The implementation currently lives in the
 <code>tree-ssa-20020619-branch</code> branch.</p>
 
+<p>The branch is tested daily on several GNU/Linux platforms, including
+Alpha, x86, IA64, AMD64, PowerPC and PowerPC64.  Regression test results
+are posted to the <a
+href="http://gcc.gnu.org/ml/gcc-testresults/">gcc-testresults</a> mailing
+list.  <a
+href="http://people.redhat.com/dnovillo/nightly-testing/tree-ssa-branch/">Full
+build logs</a> are also available.</p>
+
+<p>Daily performance results are available for <a
+href="http://people.redhat.com/dnovillo/spec95/tree-ssa-branch/">SPEC
+CPU95</a> and <a
+href="http://people.redhat.com/dnovillo/spec2000/tree-ssa-branch/">SPEC
+CPU2000</a>.</p>
+
 <h2>Table of Contents</h2>
 
 <ul>
