Shorten notes on ChangeLog entries for documentation/web page changes.

--- a/htdocs/codingconventions.html
+++ b/htdocs/codingconventions.html
@@ -44,10 +44,9 @@ maintained and kept up to date.  In particular:</p>
 
 <h2>ChangeLogs</h2>
 
-<p>GCC requires ChangeLog entries for documentation changes (see <a
-href="http://gcc.gnu.org/ml/gcc-bugs/1998-03/msg00564.html">message</a>);
-for the GCC web pages (apart from the java and libstdc++-v3 ones) we the
-CVS commit logs are sufficient.</p>
+<p>GCC requires ChangeLog entries for documentation changes; for the web
+pages (apart from <code>java/</code> and <code>libstdc++/</code>) the CVS
+commit logs are sufficient.</p>
 
 <p>See also what the <a
 href="http://www.gnu.org/prep/standards_toc.html">GNU Coding
