Add a note on the optimization of indirect tail calls. By Andreas Bauer <baueran@in.tum.de>.

--- a/htdocs/gcc-3.4/changes.html
+++ b/htdocs/gcc-3.4/changes.html
@@ -122,6 +122,8 @@
       <li>Conditional jump elimination is now more aggressive on modern CPUs.</li>
       <li>The Athlon and K8 ports have been converted to use the DFA
           processor pipeline description.</li>
+      <li>Optimization of indirect tail calls is now possible in a similar
+        fashion as direct sibcall optimization.</li>
       <li>Further small performance improvements.</li>
     </ul></li>
     <li>Support for the SH2E processor has been added to the SH port.
