* index.html: Mention Darwin and tree-ssa. 	Moved old news... 	* old-news.html: ... here.

--- a/htdocs/java/index.html
+++ b/htdocs/java/index.html
@@ -73,6 +73,24 @@ For <code>javax.crypto</code> support, we recommend the use of
 <!-- News entries start here -->
 
 <tr><td valign="top">
+<b>July 31, 2003</b>
+</td><td>
+Andrew Haley has checked in a major patch to the
+<a href="http://gcc.gnu.org/projects/tress-ssa/">tree-ssa branch</a>
+that allows us to convert entire functions to trees when reading
+from <code>.class</code> files.  This is an important step towards
+better high-level optimizations for Java.
+</td></tr>
+
+<tr><td valign="top">
+<b>July 30, 2003</b>
+</td><td>
+Thanks to Andreas Tobler and Jeff Sturm, libgcj is now built by
+default for Darwin.  This work is available on the cvs trunk, and
+will show up in gcj 3.4.
+</td></tr>
+
+<tr><td valign="top">
 <b>July 28, 2003</b>
 </td><td>
 Michael Koch has announced the first (0.0.1) release of
@@ -219,86 +237,6 @@ implementations.
 Adam Megacz announced that <a href="http://www.xwt.org">XWT</a> is
 an ActiveX control which is written in Java and compiled with gcj.
 We hope to be checking in his Windows patches in the near future.
-</td></tr>
-
-<tr><td valign="top">
-<b>December 14, 2001</b>
-</td><td>
-Hans Boehm has checked in changes which once again allow gcj and
-libgcj to work on IA-64.  His changes also speed up allocation of
-objects which don't require a finalizer.
-</td></tr>
-
-<tr><td valign="top">
-<b>November 5, 2001</b>
-</td><td>
-Tom Tromey contributed a bytecode verifier.  It hasn't yet been
-extensively tested, so it is still disabled by default.
-</td></tr>
-
-<tr><td valign="top">
-<b>October 24, 2001</b>
-</td><td>
-Tom Tromey of Red Hat checked in the <code>javax.naming</code> and
-<code>javax.transaction</code> packages, started by Anthony Green
-finished by Warren Levy and Tom.
-</td></tr>
-
-<tr><td valign="top">
-<b>October 2, 2001</b>
-</td><td>
-Tom Tromey of Red Hat has written the support code necessary to
-implement <code>java.lang.ref.*</code>.
-</td></tr>
-
-<tr><td valign="top">
-<b>September 7, 2001</b>
-</td><td>
-Anthony Green of Red Hat has added a facility for compiling property
-files and other system resources into libraries and executables.
-These files are accessible to the gcj runtime via the new "core"
-protocol handler.  The gcj runtime places "core:/" at the end of the
-java.class.path, ensuring that compiled-in resource files are
-discovered and loaded when required.  This is a convenient feature for
-building and deploying libraries and executables with no external file
-dependencies.  See the <code>--resource</code> option in the gcj
-manual for details.
-</td></tr>
-
-<tr><td valign="top">
-<b>August 27, 2001</b>
-</td><td>
-Tom Tromey has imported RMI into libgcj.  This RMI implementation was
-implemented and donated to the Free Software Foundation by
-Transvirtual Technologies; many thanks to them for their important
-contribution.
-</td></tr>
-
-<tr><td valign="top">
-<b>June 18, 2001</b>
-</td><td>
-<b>GCC 3.0 has been released!</b> Everything you need to build and run GCJ is now 
-included in a single source distribution. Download it from one of our
-<a href="../mirrors.html">mirror sites</a>.
-</td></tr>
-
-<tr><td valign="top">
-<b>June 4, 2001</b>
-</td><td>
-Per Bothner of Brainfood Inc has implemented an invocation interface
-allowing an existing non-Java thread to start and connect to a Java
-environment.  The GCJ start-up code now uses this interface.
-Brainfood is using this to attach an Apache module to a pre-compiled
-servlet-like class.
-</td></tr>
-
-<tr><td valign="top">
-<b>May 30, 2001</b>
-</td><td>
-We now have a new hash-table based lightweight lock implementation which was 
-contributed by Hans Boehm. The new code should reduce memory consumption and 
-improve performance for applications which do a lot of synchronization. 
-Currently, this code is enabled for IA-64 and X86 Linux.
 </td></tr>
 
 <tr><td valign="top">
