--- a/htdocs/java/old-news.html
+++ b/htdocs/java/old-news.html
@@ -8,6 +8,86 @@
 
 <h1>GCJ - Less Recent News</h1>
 
+<tr><td valign="top">
+<b>December 14, 2001</b>
+</td><td>
+Hans Boehm has checked in changes which once again allow gcj and
+libgcj to work on IA-64.  His changes also speed up allocation of
+objects which don't require a finalizer.
+</td></tr>
+
+<tr><td valign="top">
+<b>November 5, 2001</b>
+</td><td>
+Tom Tromey contributed a bytecode verifier.  It hasn't yet been
+extensively tested, so it is still disabled by default.
+</td></tr>
+
+<tr><td valign="top">
+<b>October 24, 2001</b>
+</td><td>
+Tom Tromey of Red Hat checked in the <code>javax.naming</code> and
+<code>javax.transaction</code> packages, started by Anthony Green
+finished by Warren Levy and Tom.
+</td></tr>
+
+<tr><td valign="top">
+<b>October 2, 2001</b>
+</td><td>
+Tom Tromey of Red Hat has written the support code necessary to
+implement <code>java.lang.ref.*</code>.
+</td></tr>
+
+<tr><td valign="top">
+<b>September 7, 2001</b>
+</td><td>
+Anthony Green of Red Hat has added a facility for compiling property
+files and other system resources into libraries and executables.
+These files are accessible to the gcj runtime via the new "core"
+protocol handler.  The gcj runtime places "core:/" at the end of the
+java.class.path, ensuring that compiled-in resource files are
+discovered and loaded when required.  This is a convenient feature for
+building and deploying libraries and executables with no external file
+dependencies.  See the <code>--resource</code> option in the gcj
+manual for details.
+</td></tr>
+
+<tr><td valign="top">
+<b>August 27, 2001</b>
+</td><td>
+Tom Tromey has imported RMI into libgcj.  This RMI implementation was
+implemented and donated to the Free Software Foundation by
+Transvirtual Technologies; many thanks to them for their important
+contribution.
+</td></tr>
+
+<tr><td valign="top">
+<b>June 18, 2001</b>
+</td><td>
+<b>GCC 3.0 has been released!</b> Everything you need to build and run GCJ is now 
+included in a single source distribution. Download it from one of our
+<a href="../mirrors.html">mirror sites</a>.
+</td></tr>
+
+<tr><td valign="top">
+<b>June 4, 2001</b>
+</td><td>
+Per Bothner of Brainfood Inc has implemented an invocation interface
+allowing an existing non-Java thread to start and connect to a Java
+environment.  The GCJ start-up code now uses this interface.
+Brainfood is using this to attach an Apache module to a pre-compiled
+servlet-like class.
+</td></tr>
+
+<tr><td valign="top">
+<b>May 30, 2001</b>
+</td><td>
+We now have a new hash-table based lightweight lock implementation which was 
+contributed by Hans Boehm. The new code should reduce memory consumption and 
+improve performance for applications which do a lot of synchronization. 
+Currently, this code is enabled for IA-64 and X86 Linux.
+</td></tr>
+
 <table>
 <tr><td valign="top">
 <b>April 25, 2001</b>
