Refer to overseers@gcc.gnu.org instead of sources.redhat.com. Shorten notes on first commit, as new maintainer are supposed to read this whole page anyways. Remove incorrect information on the use of SSH and compress that section.

--- a/htdocs/cvswrite.html
+++ b/htdocs/cvswrite.html
@@ -33,7 +33,7 @@ href="bugs/management.html">edit our bugs database</a>.</p>
 <p>We provide authenticated access via the SSH protocol.</p> 
 
 <p>If you already have an account on sources.redhat.com, please send
-email to <code>overseers(at)sources.redhat.com</code> with a request
+email to <code>overseers(at)gcc.gnu.org</code> with a request
 for access to the GCC repository.  Include the name of the person who
 is sponsoring your access.
 Else use <a
@@ -44,9 +44,7 @@ to supply your SSH public key (which you can generate via the
 <p>Once we have this information we will set up an account on
 gcc.gnu.org and inform you by mail.  At this point you
 should be able to check out a tree with CVS and add yourself to the
-MAINTAINERS file to test write access.  See <a
-href="#checkin">Checking in a change</a> for how to proceed with
-checking in your changes.</p>
+MAINTAINERS file to test write access, following the instructions below.</p>
 
 <hr />
 <h2><a name="setup">Setting up your local CVS tree</a></h2>
@@ -73,13 +71,10 @@ contents:</p>
 </code></p></blockquote>
 
 <p>To avoid the nuisance of having to supply your passphrase for each
-operation, you may want to use <code>ssh-agent</code>(1) followed by
-<code>ssh-add</code>(1) and entering your passphrase once for all.
-Either start your session as a child of <code>ssh-agent</code> or run
-it as a daemon and set the values of the environment variables
-<code>SSH_AUTHENTICATION_SOCKET</code> and <code>SSH_AGENT_PID</code>
-in each relevant process to what <code>ssh-agent</code> prints when it
-starts.  To avoid messages about (lack of) X11 forwarding, put in your
+operation, you may want to use <code>ssh-agent</code>(1) and
+<code>ssh-add</code>(1).</p>
+
+</p>To avoid messages about (lack of) X11 forwarding, put in your
 <samp>$HOME/.ssh/config</samp> an entry like:</p>
 
 <blockquote><p><code>
