* gcc-3.4/changes.html: Update.

--- a/htdocs/gcc-3.4/changes.html
+++ b/htdocs/gcc-3.4/changes.html
@@ -62,6 +62,10 @@
     <li>Precompiled headers are now supported.  Precompiled headers
         can dramatically speed up compilation of some projects.  There
         are some restrictions; read the manual for the details.</li>
+    <li>File handling in the preprocessor has been rewritten.  GCC no
+        longer gets confused by symlinks and hardlinks, and now has
+	a correct implementation of #import and #pragma once.
+	These two directives have therefore been un-deprecated.</li>
   </ul>
 
 <h3>C++</h3>
