Tweak formatting of headings.

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -8,7 +8,7 @@
 
 <img src="gcc.jpg" alt="" align="right" />
 
-<h1><small>Welcome to the GCC home page!</small></h1>
+<h1 align="left"><small>Welcome to the GCC home page!</small></h1>
 
 <p>GCC is the GNU Compiler Collection, which currently contains
 front ends for C, C++, Objective-C, Fortran,
@@ -79,13 +79,13 @@ to maintain and improve quality.</p>
 <hr />
 
 <!--
-<h2>Upcoming Events</h2>
+<h2><small>Upcoming Events</small></h2>
 
 <dl>
 </dl>
 -->
 
-<h2>News/Announcements</h2>
+<h2><small>News/Announcements</small></h2>
 
 <dl>
 
