* old-news.html: Moved <table> to correct place. 	* index.html: Fixed typo in URL.  Use GCJ instead of gcj.

--- a/htdocs/java/index.html
+++ b/htdocs/java/index.html
@@ -76,7 +76,7 @@ For <code>javax.crypto</code> support, we recommend the use of
 <b>July 31, 2003</b>
 </td><td>
 Andrew Haley has checked in a major patch to the
-<a href="http://gcc.gnu.org/projects/tress-ssa/">tree-ssa branch</a>
+<a href="http://gcc.gnu.org/projects/tree-ssa/">tree-ssa branch</a>
 that allows us to convert entire functions to trees when reading
 from <code>.class</code> files.  This is an important step towards
 better high-level optimizations for Java.
@@ -87,7 +87,7 @@ better high-level optimizations for Java.
 </td><td>
 Thanks to Andreas Tobler and Jeff Sturm, libgcj is now built by
 default for Darwin.  This work is available on the cvs trunk, and
-will show up in gcj 3.4.
+will show up in GCJ 3.4.
 </td></tr>
 
 <tr><td valign="top">
