--- a/htdocs/java/old-news.html
+++ b/htdocs/java/old-news.html
@@ -8,6 +8,10 @@
 
 <h1>GCJ - Less Recent News</h1>
 
+<table>
+
+<!-- News entries start here -->
+
 <tr><td valign="top">
 <b>December 14, 2001</b>
 </td><td>
@@ -88,7 +92,6 @@ improve performance for applications which do a lot of synchronization.
 Currently, this code is enabled for IA-64 and X86 Linux.
 </td></tr>
 
-<table>
 <tr><td valign="top">
 <b>April 25, 2001</b>
 </td><td>
