--- a/htdocs/gcc-3.4/changes.html
+++ b/htdocs/gcc-3.4/changes.html
@@ -64,7 +64,8 @@
         are some restrictions; read the manual for the details.</li>
     <li>File handling in the preprocessor has been rewritten.  GCC no
         longer gets confused by symlinks and hardlinks, and now has
-	a correct implementation of #import and #pragma once.
+	a correct implementation of <code>#import</code> and
+        <code>#pragma once</code>.
 	These two directives have therefore been un-deprecated.</li>
   </ul>
 
