Add a menu on top.  Mention option for copyright disclaimer.

--- a/htdocs/contribute.html
+++ b/htdocs/contribute.html
@@ -9,30 +9,33 @@
 <body>
 <h1>Contributing to GCC</h1>
 
-<p>We strongly encourage contributions of code, bug fixes, new
-optimizations, new features, documentation updates, web page
-improvements, etc. for GCC.</p>
+<p>We strongly encourage individuals as well as organisations to
+contribute to the development of GCC, in the form of new features, new
+or improved optimizations, bug fixes, documentation updates, web page
+improvements, etc....</p>
 
 <p>There are certain legal requirements and style issues which all
-contributions must meet.</p>
+contributions must meet:</p>
 
-<h2>Coding Standards</h2>
+<ul>
+<li><a href="#legal">Legal Prerequisits</a></li>
+<li><a href="#standards">Coding Standards</a></li>
+<li><a href="#testing">Testing Patches</a></li>
+<li><a href="#docchanges">Documentation Changes</a></li>
+<li><a href="#webchanges">Web Site Changes</a></li>
+<li><a href="#patches">Submitting Patches</a></li>
+</ul>
 
-<p>All contributions must conform to the <a
-href="http://www.gnu.org/prep/standards_toc.html">GNU Coding
-Standards</a>.  There are also some <a
-href="codingconventions.html">additional coding conventions for
-GCC</a>; these include documentation and testsuite requirements as
-well as requirements on code formatting.  Submissions which do not
-conform to the standards will be returned with a request to address
-any such problems.</p>
+<hr />
 
-<h2><a name="copyright">Copyright Assignment</a></h2>
+<h2><a name="legal">Legal Prerequisits</a></h2>
 
-<p>Before we can accept code contributions from you, we need a
-copyright assignment form filled out and filed with the FSF.</p>
+<p>Before we can incorporate significant contributions, certain
+legal requirements must be met.</p>
 
-<p><a href="http://www.gnu.org/prep/maintain.html#SEC7">See some
+<p>The FSF prefers that a contributor files a copyright assignment for
+large contributions.
+<a href="http://www.gnu.org/prep/maintain.html#SEC7">See some
 documentation by the FSF</a> for details and contact us (either via
 the <a href="mailto:gcc@gcc.gnu.org">gcc@gcc.gnu.org</a> list or the
 GCC maintainer that is taking care of your contributions) to obtain
@@ -40,10 +43,28 @@ the relevant forms.  It's a good idea to send
 <a href="mailto:assignments@gnu.org">assignments@gnu.org</a> a copy of
 your request.</p>
 
-<p>Small changes can be accepted without a copyright assignment form
-on file.</p>
+<p>If a contributor is reluctant to sign a copyright assignment for
+a large change, a disclaimer is acceptable as well.  However, a copyright
+assignment is more convenient if a contributor plans to make several
+separate contributions.</p>
 
-<!-- referenced from cvswrite.html -->
+<p>Small changes can be accepted without a copyright disclaimer or a
+copyright assignment on file.</p>
+
+
+<h2><a name="standards">Coding Standards</a></h2>
+
+<p>All contributions must conform to the <a
+href="http://www.gnu.org/prep/standards_toc.html">GNU Coding
+Standards</a>.  There are also some <a
+href="codingconventions.html">additional coding conventions for
+GCC</a>; these include documentation and testsuite requirements as
+well as requirements on code formatting.</p>
+
+<p>Submissions which do not conform to the standards will be returned
+with a request to address any such problems.</p>
+
+<!-- also referenced from cvswrite.html -->
 <h2><a name="testing">Testing Patches</a></h2>
 
 <p>All patches must be thoroughly tested.  We encourage you to test
@@ -89,12 +110,18 @@ them.</p>
 must perform a complete bootstrap; however, running other language
 test suites is not necessary.</p>
 
+
+<h2><a name="docchanges">Documentation Changes</a></h2>
+
 <p>Documentation changes do not require a bootstrap, but you must
 perform <code>make info</code> and <code>make dvi</code> and correct
 any errors.  You should investigate complaints about overfull or
 underfull hboxes from <code>make dvi</code>, as these can be the only
 indication of serious markup problems, but do not feel obliged to
 eliminate them all.</p>
+
+
+<h2><a name="webchanges">Web Site Changes</a></h2>
 
 <p>Changes to the web site must
 <a href="http://validator.w3.org/">validate</a> as XHTML 1.0
@@ -118,6 +145,7 @@ where you perform this test should not have any other changes applied
 to it, because otherwise you cannot be sure that your patch will work
 correctly on its own.  Include all your new test cases in your
 testsuite run.</p>
+
 
 <h2><a name="patches">Submitting Patches</a></h2>
 
