* index.html: Mention eclipse.

--- a/htdocs/java/index.html
+++ b/htdocs/java/index.html
@@ -73,6 +73,17 @@ For <code>javax.crypto</code> support, we recommend the use of
 <!-- News entries start here -->
 
 <tr><td valign="top">
+<b>August 1, 2003</b>
+</td><td>
+A team of hackers from Red Hat has released RPMS for a version
+of <a href="http://www.eclipse.org/">Eclipse</a>, a free software IDE
+written in Java, that has been compiled with a modified gcj.
+You can find more information
+<a href="http://sources.redhat.com/eclipse/">here</a>.  We'll be
+integrating the required gcj patches into cvs in the near future.
+</td></tr>
+
+<tr><td valign="top">
 <b>July 31, 2003</b>
 </td><td>
 Andrew Haley has checked in a major patch to the
