Rotate news.  Remove physical markup overruled by our MetaHTML style. Move part of the ARM pipeline description announcement to the GCC 3.4 changes page.

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -8,7 +8,7 @@
 
 <img src="gcc.jpg" alt="" align="right" />
 
-<h1 align="left"><small>Welcome to the GCC home page!</small></h1>
+<h1><small>Welcome to the GCC home page!</small></h1>
 
 <p>GCC is the GNU Compiler Collection, which currently contains
 front ends for C, C++, Objective-C, Fortran,
@@ -94,10 +94,8 @@ to maintain and improve quality.</p>
 Ben Elliston of Wasabi Systems, Inc. has converted the existing ARM
 processor pipeline description to the new <a
 href="http://gcc.gnu.org/onlinedocs/gccint/Processor-pipeline-description.html">DFA
-pipeline description model</a>.  There is not much change in code
-performance, but the description is now <a
-href="http://gcc.gnu.org/onlinedocs/gccint/Comparison-of-the-two-descriptions.html">easier
-to understand</a>.  It will be part of the GCC 3.4 release.
+pipeline description model</a>.
+It will be part of the GCC 3.4 release.
 </dd>
 
 <dt><b>May 27, 2003</b></dt>
