--- a/htdocs/news.html
+++ b/htdocs/news.html
@@ -14,6 +14,22 @@ home page</a>.</p>
 
 <!-- ATTENTION: This page is for *OLD* news!  Latest news goes first. -->
 
+<dt><b>January 29, 2003</b></dt>
+<dd>
+Andrew Haley of Red Hat completed the work begun by Bo Thorsen of SuSE
+to port <a href="java/">GCJ</a> to the AMD x86-64
+architecture.  This is the first implementation of the Java
+programming language to be made available on that platform.  It will
+be part of the GCC 3.3 release.
+</dd>
+
+<dt><b>January 28, 2003</b></dt>
+<dd>
+The ongoing effort to remove warnings from the GCC code base itself,
+spear-headed by Kaveh Ghazi, has paid off: For our development versions
+and snapshots, we now enable <code>-Werror</code> during a full bootstrap.
+</dd>
+
 <dt><b>January 22, 2003</b></dt>
 <dd>
 The GCC Steering Committee has named Gabriel Dos Reis as release manager for
