Add new news items.

--- a/htdocs/java/index.html
+++ b/htdocs/java/index.html
@@ -73,6 +73,25 @@ For <code>javax.crypto</code> support, we recommend the use of
 <!-- News entries start here -->
 
 <tr><td valign="top">
+<b>August 4, 2003</b>
+</td><td>
+Gary Benson from Red Hat has released 
+<a href="http://people.redhat.com/gbenson/naoko">Naoko</a>: a subset 
+of the <a href="http://sources.redhat.com/rhug">rhug</a> packages 
+that have been repackaged for eventual inclusion in Red Hat Linux. 
+Naoko basically comprises binary RPMS of Ant, Tomcat, and their 
+dependencies built with gcj.
+</td></tr>
+
+<tr><td valign="top">
+<b>August 2, 2003</b>
+</td><td>
+Tom Tromey, Andrew Haley and others from Red Hat win the 
+<a href="http://mail.gnu.org/archive/html/classpath/2003-08/msg00004.html">
+Fast Free Eclipse Prize</a>.
+</td></tr>
+
+<tr><td valign="top">
 <b>August 1, 2003</b>
 </td><td>
 A team of hackers from Red Hat has released RPMS for a version
