Remove duplicate mailing list instructions.

--- a/htdocs/contribute.html
+++ b/htdocs/contribute.html
@@ -240,28 +240,18 @@ bzip2ed and uuencoded or encoded as a <code>base64</code> MIME part is
 acceptable, as long as the ChangeLog is still posted as plain text.
 </p>
 
-<p>When you have all these pieces, bundle them up in a mail message
-and send it to <a
-href="mailto:gcc-patches@gcc.gnu.org">gcc-patches@gcc.gnu.org</a>.
-All patches and related discussion should be sent to the gcc-patches
-mailing list.  For further information on the GCC CVS repository, see
+<p>When you have all these pieces, bundle them up in a mail message and
+send it to <a href="lists.html">the appropriate mailing list(s)</a>.
+(Patches will go to one or more lists depending on what you are
+changing.)  For further information on the GCC CVS repository, see
 the <a href="cvs.html">Anonymous read-only CVS access</a> and <a
 href="cvswrite.html">Read-write CVS access</a> pages.</p>
 
 <p>If you do not receive a response to a patch that you have submitted
 within two weeks or so, it may be a good idea to chase it by sending a
-follow-up email to <a
-href="mailto:gcc-patches@gcc.gnu.org">gcc-patches@gcc.gnu.org</a>.
-Patches can occasionally fall through the cracks. Please be sure to
-include a brief summary of the patch and the URL of the entry in the
-mailing list archive of the original submission.</p>
-
-<p>Patches to the standard C++ library (libstdc++-v3), and its web
-pages, and discussion of such patches, should go to <a
-href="mailto:libstdc++@gcc.gnu.org">libstdc++@gcc.gnu.org</a> as well
-as to gcc-patches.  Patches to the Java library (libgcj) should go to
-<a href="mailto:java-patches@gcc.gnu.org">java-patches@gcc.gnu.org</a>
-instead of gcc-patches.</p>
+follow-up email to the same list(s).  Patches can occasionally fall through
+the cracks.  Please be sure to include a brief summary of the patch and the
+URL of the entry in the mailing list archive of the original submission.</p>
 
 <p>Everything listed here still applies if you can check in the patch
 without further approval under the <a
