Updates for 3.3.1. By Joe Buck <jbuck@synopsys.com>.

--- a/htdocs/gcc-3.3/changes.html
+++ b/htdocs/gcc-3.3/changes.html
@@ -446,11 +446,13 @@ Detailed release notes for the GCC 3.3 release follow.
 <ul>
 <li><a href="http://gcc.gnu.org/PR3581">3581</a> large string causes segmentation fault in cc1</li>
 <li><a href="http://gcc.gnu.org/PR4382">4382</a> <code>__builtin_{set,long}jmp</code> with <code>-O3</code> can crash the compiler</li>
+<li><a href="http://gcc.gnu.org/PR5533">5533</a> (c++) ICE when processing <code>std::accumulate(begin, end, init, invalid_op)</code></li>
 <li><a href="http://gcc.gnu.org/PR6387">6387</a> <code>-fpic -gdwarf-2 -g1</code> combination gives ICE in dwarf2out</li>
 <li><a href="http://gcc.gnu.org/PR6412">6412</a> (c++) ICE in <code>retrieve_specialization</code></li>
 <li><a href="http://gcc.gnu.org/PR6620">6620</a> (c++) partial template specialization causes an ICE (segmentation fault)</li>
 <li><a href="http://gcc.gnu.org/PR6663">6663</a> (c++) ICE with attribute <code>aligned</code></li>
 <li><a href="http://gcc.gnu.org/PR7068">7068</a> ICE with incomplete types</li>
+<li><a href="http://gcc.gnu.org/PR7083">7083</a> (c++) ICE using <code>-gstabs</code> with dodgy class derivation</li>
 <li><a href="http://gcc.gnu.org/PR7647">7647</a> (c++) ICE when data member has the name of the enclosing class</li>
 <li><a href="http://gcc.gnu.org/PR7675">7675</a> ICE in <code>fixup_var_refs_1</code></li>
 <li><a href="http://gcc.gnu.org/PR7718">7718</a> 'complex' template instantiation causes ICE</li>
@@ -741,6 +743,7 @@ here).</p>
 <li><a href="http://gcc.gnu.org/PR11228">11228</a> (c++) ICE on new-expression using array <code>operator new</code> and default-initialization</li>
 <li><a href="http://gcc.gnu.org/PR11282">11282</a> (c++) Infinite memory usage after syntax error</li>
 <li><a href="http://gcc.gnu.org/PR11301">11301</a> (fortran) ICE with <code>-fno-globals</code></li>
+<li><a href="http://gcc.gnu.org/PR11308">11308</a> (c++) ICE when using an <code>enum</code> type name as if it were a class or namespace</li>
 <li><a href="http://gcc.gnu.org/PR11473">11473</a> (c++) ICE with <code>-gstabs</code> when empty <code>struct</code> inherits from an empty <code>struct</code></li>
 <li><a href="http://gcc.gnu.org/PR11503">11503</a> (c++) ICE when instantiating template with <code>ADDR_EXPR</code></li>
 <li><a href="http://gcc.gnu.org/PR11513">11513</a> (c++) ICE in <code>push_template_decl_real</code>, in <code>cp/pt.c</code>: template member functions</li>
@@ -764,8 +767,10 @@ here).</p>
 </ul>
 <h4>C++ compiler and library</h4>
 <ul>
+<li><a href="http://gcc.gnu.org/PR2330">2330</a> <code>static_cast&lt;&gt;()</code> to a private base is allowed</li>
 <li><a href="http://gcc.gnu.org/PR5388">5388</a> Incorrect message "operands to ?: have different types"</li>
 <li><a href="http://gcc.gnu.org/PR5390">5390</a> Libiberty fails to demangle multi-digit template parameters</li>
+<li><a href="http://gcc.gnu.org/PR7877">7877</a> Incorrect parameter passing to specializations of member function templates</li>
 <li><a href="http://gcc.gnu.org/PR9393">9393</a> Anonymous namespaces and compiling the same file twice</li>
 <li><a href="http://gcc.gnu.org/PR10032">10032</a> <code>-pedantic</code> converts some errors to warnings</li>
 <li><a href="http://gcc.gnu.org/PR10468">10468</a> const <code>typeof</code>(x) is non-const, but only in templates</li>
