Add a note before "Objectives" about the revision policy of the development plan.  Integrate a footnote in the text, and rewrite the criteria patch reversion policy as a list.

--- a/htdocs/develop.html
+++ b/htdocs/develop.html
@@ -7,6 +7,11 @@
 
 <h1>GCC Development Plan</h1>
 
+<p>(Suggestions for changes to this plan are discussed on the
+<a href="mailto:gcc@gcc.gnu.org">GCC mailing list</a> and approved or
+rejected by the <a href="steering.html">GCC Steering Committee</a>.)</p>
+
+
 <h2>Objectives</h2>
 
 <p>The goals of this policy are:</p>
@@ -139,18 +144,26 @@ so it is unlikely that many conflicts will occur.</p>
 
 <h3>Patch Reversion</h3>
 
-<p>If a patch is committed which introduces a regression <a
-href="#1">[1]</a>, on any target which the Steering Committee
-considers to be important <a href="#2">[2]</a>, and the problem is
-reported to the original poster, and 48 hours pass without either the
-original poster or any other party indicating that a fix will be
-forthcoming in the very near future, and two people with write
-privileges to the affected area of the compiler determine that the
-best course of action is to revert the patch, then they may revert the
-patch.</p>
+<p>If a patch is committed which introduces a regression on any target
+which the Steering Committee considers to be important <a href="#1">[1]</a>,
+and if:</p>
+
+<ul>
+<li>the problem is reported to the original poster;</li>
+<li>48 hours pass without the original poster or any other party
+    indicating that a fix will be forthcoming in the very near future;</li>
+<li>two people with write privileges to the affected area of the compiler
+    determine that the best course of action is to revert the patch;</li>
+</ul>
+
+<p>then they may revert the patch.</p>
 
 <p>After the patch has been reverted, the poster may appeal the
 decision to the Steering Committee.</p>
+
+<p>Note that no distinction is made between patches which are
+themselves buggy and patches that expose latent bugs elsewhere in
+the compiler.</p>
 
 <p><strong>Rationale</strong></p>
 
@@ -290,11 +303,7 @@ stages of development, branch points, and releases:</p>
 
 <hr />
 
-<p id="one">[1] Note that no distinction is made between patches which are
-themselves buggy and patches that expose latent bugs elsewhere in
-the compiler.</p>
-
-<p id="two">[2] The Steering Committee is planning to prepare a list of such
+<p id="one">[1] The Steering Committee is planning to prepare a list of such
 targets.  The list will be revised at the beginning of each release
 cycle, if necessary.</p>
 
