* status.html: Link to jdk14-libgcj.html. 	* jdk14-libgcj.html: New file. 	* 1x1.gif: New file. 	* japi.css: New file.

--- a/htdocs/java/status.html
+++ b/htdocs/java/status.html
@@ -52,7 +52,7 @@ you should not (yet) rely on their correctness for security.</li>
 </table>
 
 
-<p>You can also see <a href="http://japi.sab39.org/">a comparison of
+<p>You can also see <a href="jdk14-libgcj.html">a comparison of
 libgcj with the JDK</a>.  This is updated nightly.  It is run against
 the cvs trunk, and includes GNU Crypto in its analysis.  This is the
 most up-to-date analysis of API differences.  </p>
